--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="content" contenteditable="false">
       <div class="wrapper">
         <h2>Gidole Sans</h2>
-        <p><a href="https://github.com/gidole/sans/releases/">Download</a> the latest release or view the source and contribute on <a href="https://github.com/gidole/sans">GitHub</a> and remember to <a href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
+        <p><a target="_blank" href="https://github.com/gidole/sans/releases/">Download</a> the latest release or view the source and contribute on <a target="_blank" href="https://github.com/gidole/sans">GitHub</a> and remember to <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
         <h3>
           Open Font License
         </h3>
@@ -70,7 +70,7 @@
         </h3>
         <p>
           Gidole Sans should support all latin languages - please
-          <a href="https://github.com/gidole/sans/issues">tell</a>
+          <a target="_blank" href="https://github.com/gidole/sans/issues">tell</a>
           me if you miss a glyph, find an error or think something could be improved.
         </p>
         <p class="charmap text-center">
@@ -89,9 +89,9 @@
         </p>
         <h3>Credits</h3>
         <p>The image used is
-          <a title="Faces of Ethiopia" href="http://flickr.com/photos/deepblue66/3201396661">"Faces
+          <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces
             of Ethiopia"</a>
-          by Dietmar Temps. Some people over at <a href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.</p>
+          by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.</p>
       </div>
     </div>
     <script src="js/jquery.js"></script>
