--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="content" contenteditable="false">
       <div class="wrapper">
         <h2>Gidole Sans</h2>
-        <p><a target="_blank" href="https://github.com/gidole/sans/releases/">Welcome, you can download</a> the latest release, view the source and contribute on
+        <p>Welcome, you can <a target="_blank" href="https://github.com/gidole/sans/releases/">download</a> the latest release, view the source and contribute on
           <a target="_blank" href="https://github.com/gidole/sans">GitHub</a>. Please remember to <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
         <h3>Open Font License</h3>
         <p>
