--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
     <div id="content">
       <div class="wrapper">
         <h2>Gidole Sans</h2>
-        <p>Welcome, you can <a target="_blank" href="https://github.com/gidole/sans/releases/">download</a> the latest release, view the source and contribute on
-<<<<<<< HEAD
-          <a target="_blank" href="https://github.com/gidole/sans">GitHub</a> and maybe <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
-=======
-          <a target="_blank" href="https://github.com/gidole/sans">GitHub</a>. Please remember to <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
->>>>>>> FETCH_HEAD
+        <p>Welcome, you can <a target="_blank" href="https://github.com/gidole/sans/releases/">download</a> the latest release, view the source and contribute on <a target="_blank" href="https://github.com/gidole/sans">GitHub</a> and maybe <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidolesans&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Sans%20Free%20Font&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk">tweet</a> your friends.</p>
         <h3>Open Font License</h3>
         <p>
           I've made an exception to the OFL to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc.
@@ -88,7 +83,8 @@
           &#223; ț μ ẁ &#255; ž
         </p>
         <h3>Acknowledgements</h3>
-        <p>The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
+        <p>
+          The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
         </p>
       </div>
     </div>
