--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           &#187; Your requests, ideas etc.<br>
         </p>
         <div id="testdrive">
-          <h3>Testdrive </h3>
+          <h3>Testdrive</h3>
           <p>
             <input id="toggle-1" type="checkbox">
             <span class="switchtext">
@@ -62,6 +62,13 @@
             <span class="switchtext">
               Nightmode 
             </span>
+            <br>
+<!--
+            <input id="toggle-4" type="checkbox">
+            <span class="switchtext">
+              Stylistic alternates <span class="comment">(use FireFox/Chrome)</span>
+            </span>
+-->
           </p>
         </div> <!-- Testdrive -->
         <h3>Characters </h3>
@@ -108,6 +115,10 @@
         
         $("#toggle-3").click(function () {
           $("body").toggleClass("dark");
+        });
+
+        $("#toggle-4").click(function () {
+          $("body").toggleClass("tech");
         });
 
         $(window).scroll(function () {
