--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="wrapper">
       <h2>Gidole</h2>
       <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautifull rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).</p>
-      <span id="testdrive">
+      <aside id="testdrive">
         <h3>Settings</h3>
         <p>
           <input id="toggle-1" type="checkbox">
@@ -73,7 +73,7 @@
           </span>
 -->
         </p>
-      </span>
+      </aside>
       <h2>The Typeface</h2>
       <h3>Design</h3>
       <p>I started creating this somewhat geometric sans serif because I needed a font for an app I'm creating. It's my modern take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
