--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>    
     <main class="wrapper">
       <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautifull rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).</p>
+      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).</p>
       <aside id="testdrive">
         <h3>Settings</h3>
         <p>
@@ -119,6 +119,8 @@
       <p>
         The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
       </p>
+      <h2>Thank me</h2>
+      <p>You can help me spread the word by sharing this page on social media #gidole and/or appreciate this on <a href="https://www.behance.net/gallery/22341011/Gidole-Free-Typeface-gidolegithubio" target="_blank">Bēhance</a></p>
     </main>
     <script src="js/jquery.js"></script>
     <script src="js/mm-fontsize.js"></script>
