--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
       </p>
       <h2>Thank me</h2>
-      <p>You can help me spread the word by sharing this page on social media #gidole and/or appreciate this on <a href="https://www.behance.net/gallery/22341011/Gidole-Free-Typeface-gidolegithubio" target="_blank">Bēhance</a></p>
+      <p>Spread the word using #gidole and/or appreciate this on <a href="https://www.behance.net/gallery/22341011/Gidole-Free-Typeface-gidolegithubio" target="_blank">Bēhance</a></p>
     </main>
     <script src="js/jquery.js"></script>
     <script src="js/mm-fontsize.js"></script>
