--- a/index.html
+++ b/index.html
@@ -27,38 +27,41 @@
         </div>
     </header >
     <nav class="social text-center">
-        <a target="_blank" href="https://github.com/gidole/sans/releases/" id="githubicon">
+      <div class="socialwrap">
+        <span>Get:</span>
+        <a target="_blank" href="https://github.com/gidole/sans/releases/" class="defaulticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-19.6-6h24v-4h-24v4m22-18h-6v-10h-8v10h-6l10 10"/></svg>
         </a>
-        <a target="_blank" href="https://github.com/gidole/sans" id="downloadicon">
+        <a target="_blank" href="https://github.com/gidole/sans" class="defaulticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m15.02 40h-2.622c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798h-2.622c.002-3.739.003-6.878.003-7.483 0-1.866-.639-3.086-1.357-3.703 4.454-.495 9.129-2.185 9.129-9.866 0-2.182-.774-3.967-2.056-5.365.206-.506.892-2.538-.199-5.291 0 0-1.675-.538-5.493 2.05-1.597-.443-3.308-.665-5.01-.673-1.7.007-3.411.23-5.01.673-3.82-2.587-5.499-2.05-5.499-2.05-1.087 2.753-.401 4.786-.195 5.291-1.279 1.398-2.058 3.183-2.058 5.365 0 7.661 4.668 9.377 9.107 9.882-.572.499-1.088 1.381-1.269 2.673-1.139.511-4.04 1.393-5.819-1.662 0 0-1.056-1.918-3.062-2.061 0 0-1.953-.024-.137 1.216 0 0 1.311.615 2.22 2.924 0 0 1.173 3.888 6.735 2.681.001.222.003 2.474.004 5.399" fill="#181717"/></svg>
-        </a>
-        &nbsp;&nbsp;
-        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface         &url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" id="twittericon">
+        </a>&nbsp;
+        <span>Share:</span>
+        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface         &url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
         </a>
-        <a href="https://www.facebook.com/dialog/feed?app_id=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&name=Gidole%20Free%20Typeface&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" id="facebookicon">
+        <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&name=Gidole%20Free%20Typeface&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m6.4-34v6h-4c-1.1 0-2 .9-2 2v4h6v6h-6v16h-6v-16h-4v-6h4v-5c0-3.88 3.14-7 7-7h5"/></svg>
         </a>
-        <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fgidole.github.io%2F&media=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&description=Gidole%20Free%20Typeface" target="_blank" id="pinteresticon">
+        <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fgidole.github.io%2F&media=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&description=Gidole%20Free%20Typeface" target="_blank" class="pinteresticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-5.6-11.603c-1.605 0-3.137-.678-4.233-1.84l-1.904 6.4-.136.414-.064-.022c-.392.651-1.088 1.048-1.864 1.048-1.212 0-2.2-.986-2.2-2.202 0-.102.012-.195.028-.29l-.034-.014.108-.356 3.698-11.124c0 0-.399-1.226-.399-2.946 0-3.465 1.843-4.465 3.327-4.465 1.484 0 2.834.527 2.834 2.621 0 2.688-1.778 4.064-1.778 6.01 0 1.48 1.206 2.684 2.686 2.684 4.668 0 6.33-3.52 6.33-6.814 0-4.356-3.768-7.9-8.399-7.9-4.633 0-8.401 3.544-8.401 7.9.002 1.348.401 2.688 1.084 3.87.186.312.284.633.284 1.03 0 1.104-.898 2-2 2-.712 0-1.378-.397-1.734-.99-1.068-1.792-1.634-3.836-1.634-5.91 0-6.562 5.562-11.9 12.401-11.9 6.837 0 12.399 5.338 12.399 11.9 0 5.25-3.256 10.9-10.399 10.9"/></svg>            
+        </a>&nbsp;
+        <span>Me:</span>
+        <a href="https://www.behance.net/andreaslarsen" target="_blank" class="behanceicon">
+          <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.01-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.01-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.01 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.01 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-13.268-28.56c.808 0 1.606.068 2.29.254.684.124 1.284.389 1.781.7.497.311.896.776 1.145 1.336.249.56.382 1.289.382 2.035 0 .87-.201 1.667-.636 2.226-.373.559-1.035 1.09-1.781 1.463 1.057.311 1.92.908 2.417 1.654.497.746.827 1.742.827 2.799 0 .87-.198 1.668-.509 2.29-.311.622-.84 1.217-1.399 1.59-.56.373-1.289.704-2.035.89-.746.187-1.544.318-2.29.318h-8.523v-17.555m20.29 14.565c.497.497 1.295.763 2.29.763.684 0 1.347-.198 1.845-.509.497-.373.83-.772.954-1.145h3.117c-.497 1.492-1.295 2.624-2.29 3.307-.995.622-2.259 1.018-3.689 1.018-.995 0-1.927-.198-2.735-.509-.808-.311-1.476-.778-2.035-1.399-.559-.559-1.023-1.291-1.272-2.099-.311-.808-.445-1.74-.445-2.735 0-.933.134-1.863.445-2.671.311-.808.776-1.541 1.336-2.163.559-.559 1.289-1.088 2.035-1.399.808-.311 1.677-.509 2.671-.509 1.057 0 2.054.201 2.862.636.808.435 1.474.971 1.972 1.717.497.684.896 1.547 1.145 2.417.124.87.189 1.804.127 2.799h-9.223c0 .995.393 1.983.89 2.481m-12.276.064c.373 0 .771-.065 1.081-.127.311-.062.642-.195.891-.382.249-.186.45-.389.636-.7.124-.311.254-.71.254-1.145 0-.87-.266-1.537-.763-1.972-.497-.373-1.227-.573-2.035-.573h-4.198v4.898m20.417-6.742c-.435-.435-1.164-.7-1.972-.7-.559 0-1.026.131-1.399.318-.373.186-.642.451-.89.7-.249.249-.383.58-.445.89-.062.311-.127.578-.127.827h5.724c-.124-.933-.455-1.6-.89-2.035m-16.474-.763c.684 0 1.282-.198 1.717-.509.435-.311.636-.906.636-1.59 0-.373-.067-.769-.191-1.018-.124-.249-.324-.45-.573-.636-.249-.124-.516-.256-.827-.318-.311-.062-.645-.064-1.018-.064h-3.689v4.134m14.82-5.915h7.124v1.717h-7.124v-1.717"/></svg>
         </a>
+        <a href="https://twitter.com/intent/follow?screen_name=andreaslarsendk" target="_blank" class="twittericon">
+          <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
+        </a>
+        <div class="settings defaulticon">
+          <svg id="darktoggle" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-17.5-10.1c2.534 2.534 6.03 4.101 9.899 4.101 7.732 0 14-6.268 14-14 0-3.866-1.567-7.366-4.101-9.899l3.757-3.757c-.718-.718-1.573-1.301-2.521-1.705-1.472-.628-2.983-.638-5.056-.638h-12.16c-2.073 0-3.584.01-5.056.638-1.896.809-3.417 2.329-4.226 4.226-.628 1.472-.638 2.983-.638 5.056v12.16c0 2.073.01 3.584.638 5.056.404.948.987 1.802 1.705 2.521l3.757-3.757m19.799-19.799l-19.799 19.799.587-3.677-3.622-.865 1.95-3.173-3.02-2.185 3.02-2.185-1.95-3.173 3.622-.865-.587-3.677 3.677.587.865-3.622 3.173 1.95 2.185-3.02 2.185 3.02 3.173-1.95.865 3.622 3.677-.587"/></svg>
+        </div>
+      </div>        
     </nav>    
     <main class="wrapper">
       <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named this font after it. 
-<!--        Gidole is a small beautiful rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).-->
+      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
       </p>
-      <h3>Screenshots</h3>
-      <div class="screenshots">
-        <div><img data-lazy="img/slice1@2x.png"/></div>
-        <div><img data-lazy="img/slice2@2x.png"/></div>
-        <div><img data-lazy="img/slice3@2x.png"/></div>
-        <div><img data-lazy="img/slice4@2x.png"/></div>
-        <div><img data-lazy="img/slice5@2x.png"/></div>
-        <div><img data-lazy="img/AaBb.gif"/></div>
-      </div>
-      <aside id="testdrive">
+<!--      <aside id="testdrive">
         <h3>Settings</h3>
         <p>
           <input id="toggle-1" type="checkbox">
@@ -66,43 +69,50 @@
             edit anything on this page or
           </span>
           <br>
-<!--
           <input id="toggle-2" type="checkbox">
           <span class="switchtext">
             Gidole-Light (draft - many errors)
           </span>
           <br>
--->
           <input id="toggle-3" type="checkbox">
           <span class="switchtext">
             switch to nightmode. 
           </span>
           <br>
-<!--
           <input id="toggle-4" type="checkbox">
           <span class="switchtext">
             Stylistic alternates <span class="comment">(use FireFox/Chrome)</span>
           </span>
--->
         </p>
-      </aside>
+      </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p>I started creating this somewhat geometric sans serif because I needed a font for an app I'm creating. It's my modern take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
+      <p>I've built it around slightly squircled circle, open apertures and even stroke width for a minimalistic and geometric look without sacrificing legibility. It's my take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
+      <aside>
+        <h3>Screenshots</h3>
+        <div class="screenshots">
+          <div><img data-lazy="img/slice1@2x.png"/></div>
+          <div><img data-lazy="img/slice2@2x.png"/></div>
+          <div><img data-lazy="img/slice3@2x.png"/></div>
+          <div><img data-lazy="img/slice4@2x.png"/></div>
+          <div><img data-lazy="img/slice5@2x.png"/></div>
+          <div><img data-lazy="img/AaBb.gif"/></div>
+        </div>      
+      </aside>
       <h3>Open Source</h3>
-      <p>Everything is on GitHub so you can help me improve this font by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. I've used the free <a href="http://fontforge.github.io/" target="_blank">FontForge</a> outline editor so anyone can contribute. You can also help me improve this <a href="https://github.com/gidole/gidole.github.io" target="_blank">webpage</a>.
+      <p>Everything's on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I'm using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
-      <p>
-        I've made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc.
+      <p>I've made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
       </p>
+<!--
       <h3>Usage</h3>
-      <p>I recommend using font size ≥ 14px and you'd probably want to reduce the letterspacing for <span class="reduced">headlines.</span> For web I'd recommend adding this to your css:<br>
+      <p>You'd probably want to adjust the letterspacing for <span class="reduced">headlines</span> and add this to your css for webpages:<br>
         -webkit-font-smoothing: antialiased;<br>
         text-rendering: optimizelegibility;</p>        
+-->
       <h3>Roadmap</h3>
       <p>
-        <span class="strike">&#187; Improve onscreen rendering</span><br>
         &#187; Better spacing + kerning<br>
         &#187; Add missing glyphs<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
@@ -110,10 +120,7 @@
         &#187; Your requests, ideas etc.<br>
       </p>
       <h3>Characters </h3>
-      <p>
-        Gidole Sans should support all latin languages - please <a target="_blank" href="https://github.com/gidole/sans/issues">tell</a> me if you miss a glyph, find an error or think something could be improved.
-      </p>
-      <p class="text-center">
+      <p class="text-center charmap">
         A B C D E F G H I J K L M N O P Q R S T U V W X Y Z<br>
         a b c d e f g h i j k l m n o p q r s t u v w x y z<br><br>
         1 2 3 4 5 6 7 8 9 0<br><br>
@@ -131,8 +138,6 @@
       <p>
         The image used is <a title="Faces of Ethiopia" target="_blank" href="http://flickr.com/photos/deepblue66/3201396661">"Faces of Ethiopia"</a> by Dietmar Temps. Some people over at <a target="_blank" href="http://typophile.com/node/121996">Typophile</a> gave me very helpful feedback.
       </p>
-      <h2>Thank me</h2>
-      <p>Spread the word using #gidole and/or appreciate this on <a href="https://www.behance.net/gallery/22341011/Gidole-Free-Typeface-gidolegithubio" target="_blank">Bēhance</a></p>
     </main>
     <script src="js/jquery.js"></script>
     <script src="js/mm-fontsize.js"></script>
@@ -153,7 +158,7 @@
           $("body").toggleClass("fake");
         });
         
-        $("#toggle-3").click(function () {
+        $("#darktoggle").click(function () {
           $("body").toggleClass("dark");
         });
 
