--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
 -->
       <h3>Roadmap</h3>
       <p>
-        &#187; Better spacing + kerning<br>
-        &#187; Add missing glyphs<br>
+        &#187; Improve spacing + kerning<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
         &#187; Opentype features<br>
         &#187; Your requests, ideas etc.<br>
