--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p>I've built it around slightly squircled circle, open apertures and even stroke width for a minimalistic and geometric look without sacrificing legibility. It's my take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
+      <p>I’ve built it around slightly squircled circle, open apertures and even stroke width for a minimalistic and geometric look without sacrificing legibility. It’s my take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
       <aside>
         <h3>Screenshots</h3>
         <div class="screenshots">
@@ -100,10 +100,10 @@
         </div>      
       </aside>
       <h3>Open Source</h3>
-      <p>Everything's on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I'm using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
+      <p>Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
       <h3>License</h3>
-      <p>I've made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
+      <p>I’ve made an exception to the Open Font License to allow webfont conversions without the need for renaming. The OFL lets you use and modify the font freely in applications, web, desktop, documents etc. 
       </p>
 <!--
       <h3>Usage</h3>
