--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="social text-center">
       <div class="socialwrap">
         <span>Get:</span>
-        <a target="_blank" href="https://github.com/gidole/sans/blob/master/Resources/Gidole.zip?raw=true" class="defaulticon">
+        <a href="https://github.com/gidole/sans/blob/master/Resources/Gidole.zip?raw=true" class="defaulticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-19.6-6h24v-4h-24v4m22-18h-6v-10h-8v10h-6l10 10"/></svg>
         </a>
         <a target="_blank" href="https://github.com/gidole/sans" class="defaulticon">
