primes for location

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>    
     <main class="wrapper">
       <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38'57.8"N 37°22'08.7"E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
+      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38&8242;57.8&#8243;N 37°22&8242;08.7&#8243;E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
       </p>
 <!--      <aside id="testdrive">
         <h3>Settings</h3>
