--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       <h2>The Typeface</h2>
       <h3>Design</h3>
       <p>I’ve built it around slightly squircled circle, open apertures and even stroke width for a minimalistic and geometric look without sacrificing legibility. It’s my take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
+<!--
       <aside>
         <h3>Screenshots</h3>
         <div class="screenshots">
@@ -105,6 +106,7 @@
           <div><img data-lazy="img/AaBb.gif"/></div>
         </div>      
       </aside>
+-->
       <h3>Open Source</h3>
       <p>Everything’s on GitHub - help me by reporting <a href="https://github.com/gidole/sans/issues" target="_blank">issues</a> or making improvements by <a href="https://github.com/gidole/sans/fork">forking</a> and creating pull requests. The software I’m using, <a href="http://fontforge.github.io/" target="_blank">FontForge</a>, is also free.
       </p>
@@ -146,7 +148,7 @@
     </main>
     <script src="js/jquery.js"></script>
     <script src="js/mm-fontsize.js"></script>
-    <script src="slick/slick.min.js"></script>    
+<!--    <script src="slick/slick.min.js"></script>    -->
     <script>
       $(document).ready(function () {
 
