--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Gidole Free Typeface</title>
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@andreaslarsendk">
+    <meta name="twitter:title" content="Gidole free typeface">
+    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. Gidole is an open source project so please don't resitate with feedback and help me improve it for all to benifit.">
+    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypeface.png">    <title>Gidole Free Typeface</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
@@ -12,6 +16,7 @@
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    
   </head>
   <body contenteditable="false">
     <noscript class="text-center">The Testdrive functions require javascript (and the fontsize may be "off")</noscript>
@@ -42,7 +47,7 @@
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m15.02 40h-2.622c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798h-2.622c.002-3.739.003-6.878.003-7.483 0-1.866-.639-3.086-1.357-3.703 4.454-.495 9.129-2.185 9.129-9.866 0-2.182-.774-3.967-2.056-5.365.206-.506.892-2.538-.199-5.291 0 0-1.675-.538-5.493 2.05-1.597-.443-3.308-.665-5.01-.673-1.7.007-3.411.23-5.01.673-3.82-2.587-5.499-2.05-5.499-2.05-1.087 2.753-.401 4.786-.195 5.291-1.279 1.398-2.058 3.183-2.058 5.365 0 7.661 4.668 9.377 9.107 9.882-.572.499-1.088 1.381-1.269 2.673-1.139.511-4.04 1.393-5.819-1.662 0 0-1.056-1.918-3.062-2.061 0 0-1.953-.024-.137 1.216 0 0 1.311.615 2.22 2.924 0 0 1.173 3.888 6.735 2.681.001.222.003 2.474.004 5.399" fill="#181717"/></svg>
         </a>&nbsp;
         <span>Share:</span>
-        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface         &url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
+        <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
         </a>
         <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&name=Gidole%20Free%20Typeface&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
