--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole free typeface">
-    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. Gidole is an open source project so please don't resitate with feedback and help me improve it for all to benifit.">
+    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. Currently regular weight only but more will be added. Gidole is an open source project on GitHub so please don't hesitate with feedback and other contributions to help me improve it for all to benifit. Follow me for updates.">
     <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypeface.png">    <title>Gidole Free Typeface</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+<!--    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="favicon-192x192.png" sizes="192x192">
@@ -199,13 +199,13 @@
           offset = $( ".social" ).offset();
         });  
         
-        $('.screenshots').slick({
-          lazyLoad: 'progressive',
-          infinite: true,
-          speed: 500,
-          slidesToShow: 1,
-          cssEase: 'cubic-bezier(0.645, 0.045, 0.355, 1.000)'
-        });
+//        $('.screenshots').slick({
+//          lazyLoad: 'progressive',
+//          infinite: true,
+//          speed: 500,
+//          slidesToShow: 1,
+//          cssEase: 'cubic-bezier(0.645, 0.045, 0.355, 1.000)'
+//        });
         
         var loading = function() {
             // add the overlay with loading image to the page
