--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole free typeface">
-    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. Currently regular weight only but more will be added. Gidole is an open source project on GitHub so please don't hesitate with feedback and other contributions to help me improve it for all to benifit. Follow me for updates.">
+    <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. An open source project so please don't hesitate with feedback and other contributions. More weights in the works. Follow me for updates.">
     <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypeface.png">    <title>Gidole Free Typeface</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
 <!--    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
