--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="twitter:creator" content="@andreaslarsendk">
     <meta name="twitter:title" content="Gidole free typeface">
     <meta name="twitter:description" content="A free modern DIN-esque typeface perfect for (almost?) everything. An open source project so please don't hesitate with feedback and other contributions. More weights in the works. Follow me for updates.">
-    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypeface.png">    <title>Gidole Free Typeface</title>
+    <meta name="twitter:image:src" content="http://gidole.github.io/img/gidoletypefaces.png">    <title>Gidole Free Typefaces</title>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
 <!--    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>-->
     <noscript><style>#testdrive{opacity:0.25;pointer-events:none;}</style></noscript>
@@ -23,7 +23,7 @@
     <header class="jumbotron">
         <h1 class="text-center">
           <div id="title">Gidole</div>
-          <div id="tag">free typeface</div>
+          <div id="tag">free typefaces</div>
         </h1>
         <div id="scrollhelp" class="text-center no-select">
           <div id="inTurnBlurringTextG">
@@ -50,10 +50,10 @@
         <a target="_blank" href="https://twitter.com/intent/tweet?hashtags=gidole&original_referer=https%3A%2F%2Fgidole.github.io&text=Gidole%20Free%20Typeface&url=http%3A%2F%2Fgidole.github.io&via=andreaslarsendk" class="twittericon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m5.423-26.19c-.14 9.24-8.326 18.02-17.15 18.415-3.64.16-7.577-1.378-9.877-2.839 2.68.42 7.2-.972 9-2.492-2.64-.28-4.937-2.198-5.677-4.338.76.12 1.911.071 2.631-.069-2.38-.8-4.72-3.105-4.8-6.185.66.32 1.711.702 2.631.762-1.78-1.02-3.323-5.822-1.823-8.262 2.64 2.9 7.518 6.118 12.738 6.438-1.32-5.6 7.515-9.394 10.615-5.654 1.32-.24 2.906-.917 3.946-1.477-.42 1.28-1.585 2.672-2.585 3.392 1.08-.14 2.503-.526 3.323-.946-.5 1.06-2.02 2.454-2.977 3.254"/></svg>
         </a>
-        <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&name=Gidole%20Free%20Typeface&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
+        <a href="https://www.facebook.com/dialog/feed?app_class=694165360698061&link=http%3A%2F%2Fgidole.github.io%2F&picture=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypefaces.png&name=Gidole%20Free%20Typefaces&caption=%20&description=A%20free%20modern%20DIN&redirect_uri=http%3A%2F%2Fwww.facebook.com%2F" target="_blank" class="facebookicon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m6.4-34v6h-4c-1.1 0-2 .9-2 2v4h6v6h-6v16h-6v-16h-4v-6h4v-5c0-3.88 3.14-7 7-7h5"/></svg>
         </a>
-        <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fgidole.github.io%2F&media=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypeface.png&description=Gidole%20Free%20Typeface" target="_blank" class="pinteresticon">
+        <a href="http://pinterest.com/pin/create/button/?url=http%3A%2F%2Fgidole.github.io%2F&media=http%3A%2F%2Fgidole.github.io%2Fimg%2Fgidoletypefaces.png&description=Gidole%20Free%20Typefaces" target="_blank" class="pinteresticon">
           <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-5.6-11.603c-1.605 0-3.137-.678-4.233-1.84l-1.904 6.4-.136.414-.064-.022c-.392.651-1.088 1.048-1.864 1.048-1.212 0-2.2-.986-2.2-2.202 0-.102.012-.195.028-.29l-.034-.014.108-.356 3.698-11.124c0 0-.399-1.226-.399-2.946 0-3.465 1.843-4.465 3.327-4.465 1.484 0 2.834.527 2.834 2.621 0 2.688-1.778 4.064-1.778 6.01 0 1.48 1.206 2.684 2.686 2.684 4.668 0 6.33-3.52 6.33-6.814 0-4.356-3.768-7.9-8.399-7.9-4.633 0-8.401 3.544-8.401 7.9.002 1.348.401 2.688 1.084 3.87.186.312.284.633.284 1.03 0 1.104-.898 2-2 2-.712 0-1.378-.397-1.734-.99-1.068-1.792-1.634-3.836-1.634-5.91 0-6.562 5.562-11.9 12.401-11.9 6.837 0 12.399 5.338 12.399 11.9 0 5.25-3.256 10.9-10.399 10.9"/></svg>            
         </a>&nbsp;
         <span>Me:</span>
@@ -65,12 +65,13 @@
         </a>
         <div class="settings defaulticon">
           <svg id="darktoggle" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 40h-15.2c-2.592 0-4.48-.013-6.32-.798-2.371-1.011-4.271-2.912-5.282-5.282-.785-1.84-.798-3.729-.798-6.32v-15.2c0-2.592.013-4.48.798-6.32 1.011-2.371 2.912-4.271 5.282-5.282 1.84-.785 3.729-.798 6.32-.798h15.2c2.592 0 4.48.013 6.32.798 2.371 1.011 4.271 2.912 5.282 5.282.785 1.84.798 3.729.798 6.32v15.2c0 2.592-.013 4.48-.798 6.32-1.011 2.371-2.912 4.271-5.282 5.282-1.84.785-3.729.798-6.32.798m-17.5-10.1c2.534 2.534 6.03 4.101 9.899 4.101 7.732 0 14-6.268 14-14 0-3.866-1.567-7.366-4.101-9.899l3.757-3.757c-.718-.718-1.573-1.301-2.521-1.705-1.472-.628-2.983-.638-5.056-.638h-12.16c-2.073 0-3.584.01-5.056.638-1.896.809-3.417 2.329-4.226 4.226-.628 1.472-.638 2.983-.638 5.056v12.16c0 2.073.01 3.584.638 5.056.404.948.987 1.802 1.705 2.521l3.757-3.757m19.799-19.799l-19.799 19.799.587-3.677-3.622-.865 1.95-3.173-3.02-2.185 3.02-2.185-1.95-3.173 3.622-.865-.587-3.677 3.677.587.865-3.622 3.173 1.95 2.185-3.02 2.185 3.02 3.173-1.95.865 3.622 3.677-.587"/></svg>
+          <svg id="typetoggle" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" clip-rule="evenodd" stroke-miterlimit="1.41421"><path d="m27.6 0h-15.2c-2.592 0-4.48.013-6.32.798-2.371 1.01-4.271 2.912-5.282 5.282-.785 1.84-.798 3.729-.798 6.32v15.2c0 2.592.013 4.48.798 6.32 1.01 2.371 2.912 4.271 5.282 5.282 1.84.785 3.729.798 6.32.798h15.2c2.592 0 4.48-.013 6.32-.798 2.371-1.01 4.271-2.912 5.282-5.282.785-1.84.798-3.729.798-6.32v-15.2c0-2.592-.013-4.48-.798-6.32-1.01-2.371-2.912-4.271-5.282-5.282-1.84-.785-3.729-.798-6.32-.798m-19.6 10v-4h24v4h-10v24h-4v-24h-10"/></svg>
         </div>
       </div>        
     </nav>    
     <main class="wrapper">
       <h2>Gidole</h2>
-      <p>I spent 4 childhood years in Gidole and therefore named this font after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38&#8242;57.8&#8243;N 37°22&#8242;08.7&#8243;E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
+      <p>I spent 4 childhood years in Gidole and therefore named these fonts after it. Gidole is a small beautiful rural town in Ethiopia @ 5°38&#8242;57.8&#8243;N 37°22&#8242;08.7&#8243;E overlooking the Great Rift Valley (<a target="_blank" href="https://www.google.com/maps/place/Gidole,+Etiopien/@9.0261392,40.0094517,6z/data=!4m2!3m1!1s0x17bad5f68ec42f83:0xacbf25dd0377cfb7">map</a>).
       </p>
 <!--      <aside id="testdrive">
         <h3>Settings</h3>
@@ -98,7 +99,7 @@
       </aside> -->
       <h2>The Typeface</h2>
       <h3>Design</h3>
-      <p>I’ve built it around slightly squircled circle, open apertures and even stroke width for a minimalistic and geometric look without sacrificing legibility. It’s my take on the old trusty Deutsches Institut für Normung #1451 (<a href="http://en.wikipedia.org/wiki/DIN_1451" target="_blank">wiki</a>).</p>
+      <p>Gidole is an elegant and highly legible <a href="http://en.wikipedia.org/wiki/DIN_1451">DIN 1451</a>-inspired typeface drawn using <a href="http://en.wikipedia.org/wiki/Euler_spiral">Euler spirals</a>. Gidole Play is obviously more playful and therefore better suited for headlines/posters.</p>
 <!--
       <aside>
         <h3>Screenshots</h3>
@@ -126,12 +127,13 @@
 -->
       <h3>Roadmap</h3>
       <p>
-        &#187; Improve spacing + kerning<br>
         &#187; Weights 100-800 <span class="comment">(maybe 900)</span><br>
+        &#187; Improve spacing + kerning<br>
         &#187; Opentype features<br>
         &#187; Your requests, ideas etc.<br>
       </p>
       <h3>Characters </h3>
+      <p>Supports all latin languages with >500 glyphs.</p>
       <p class="text-center charmap">
         A B C D E F G H I J K L M N O P Q R S T U V W X Y Z<br>
         a b c d e f g h i j k l m n o p q r s t u v w x y z<br><br>
@@ -142,7 +144,7 @@
         &#39; &quot; ‘ ’ “ ” * &#176; ′ ″ ‴ &#171; &#187; ‹ ›<br>
         . , … _ : ; &#161; ! &#191; ? &#183; • - – — ~<br>
         + − &#247; &#215; &#177; = ≠ ≈ &lt; &gt; ≤ ≥ √<br><br>
-        Å &#198; &#199; Đ Ə Ğ Ȋ Ĵ Ķ Ŀ Ŋ Ø Œ &#222; Ṛ Ș Ŧ Ų Ẅ Ỹ Ž<br>
+        Å &#198; &#199; Đ Ə Ğ Ȋ Ĵ Ķ Ŀ Ŋ Ø Œ &#222; Ṛ ẞ Ŧ Ų Ẅ Ỹ Ž<br>
         ą &#230; &#229; &#231; &#240; ə ǵ ﬁ ﬂ ħ ī ĵ ĸ ł ŋ &#248; œ &#254; ȑ
         &#223; ț μ ẁ &#255; ž
       </p>
@@ -174,8 +176,8 @@
           $("body").toggleClass("dark");
         });
 
-        $("#toggle-4").click(function () {
-          $("body").toggleClass("tech");
+        $("#typetoggle").click(function () {
+          $("body").toggleClass("play");
         });
 
         $(window).scroll(function () {
@@ -210,9 +212,9 @@
         var loading = function() {
             // add the overlay with loading image to the page
             var over = '<div id="overlay">' +
-                '<div>' +
-                '<h2>Thanks for downloading</h2>' +
-                '<p>Please consider appreciating it <a href="https://www.behance.net/gallery/22341011/Gidole-Free-Typeface-gidolegithubio" target="_blank">on Behance</a> to thank me</p>' +                
+                '<div class="wrapper">' +
+                '<h2>Thank you</h2>' +
+                '<p>Thank me by sharing Gidole on social media and/or appreciating my projects on <a href="http://behance.net/andreaslarsen" target="_blank">Behance</a>. Click anywhere to dismiss.</p>' +                
                 '</div>' +
                 '</div>';
             $(over).appendTo('body');
